--- a/parte1/aula_02/aula_02.tex
+++ b/parte1/aula_02/aula_02.tex
@@ -1,37 +1,36 @@
 \documentclass[hyperref={pdfpagelabels=false}]{beamer}
-\mode<presentation>
-{
-  \usetheme{Frankfurt}
-  \setbeamercovered{transparent}
-}
+\usetheme[block=fill]{metropolis}
+
 \usepackage[portuguese]{babel}
 \usepackage[utf8]{inputenc} % To use characters such as é without typing é
 \usepackage{ctable}
 \usepackage{listings}
-\lstset{language=Matlab,showstringspaces=false,basicstyle=\ttfamily,
-    keywordstyle=\color{blue},
-    commentstyle=\color{red},
-    stringstyle=\color{magenta},
-    numbers=left,
-    numberstyle=\tiny\color{gray},
-    stepnumber=1,
-    numbersep=10pt,
-    tabsize=4, frame=single}
+\lstset{%
+  language=Matlab,
+  showstringspaces=false,
+  basicstyle=\linespread{0.9}\ttfamily,
+  keywordstyle=\textbf,
+  commentstyle=\color{red},
+  stringstyle=\color{orange},
+  numbers=left,
+  numberstyle=\tiny\color{gray},
+  stepnumber=1,
+  numbersep=10pt,
+  columns=fullflexible,
+  tabsize=3,
+  frame=single,
+  frameround=tttt}
 \let\Tiny=\tiny % eliminates compilation errors
+\usepackage{fontspec}
 
-% Basic definitions
-
-\newcommand{\red}[1]{\textcolor{red}{#1}}
-\newcommand{\blue}[1]{\textcolor{blue}{#1}}
-
-\title{Laboratório de Matemática Computacional I} \author[M. Weber Mendonça]
-{\hspace{-0.3cm}Melissa Weber Mendonça\inst{1}}
-\institute[UFSC]{\inst{1} Universidade Federal de Santa Catarina} 
+\title{Laboratório de Matemática Computacional I}
+\subtitle{Aula 2}
+\author[M. Weber Mendonça]{Melissa Weber Mendonça\\
+Universidade Federal de Santa Catarina} 
 \date{2011}
 
-\logo{\includegraphics[height=1.5cm]{../../brasao_UFSC.png}}
-
 \begin{document}
+\setmonofont{Inconsolata}
 
 \begin{frame}
   \titlepage
@@ -43,7 +42,6 @@
 
 \begin{frame}{If - Else - End: Se - Senão - Fim}
   O If (Se) representa uma sentença lógica condicional: 
-  \vskip1cm
   \begin{center}
     \begin{minipage}{0.7\textwidth}
       \begin{itemize}
@@ -205,6 +203,9 @@
 
 \begin{frame}{ElseIf: exemplo 2}
   Escrever um programa que, dada a idade de uma pessoa, caracteriza essa pessoa como criança, adolescente, adulto ou idoso.
+\end{frame}
+
+\begin{frame}{ElseIf: resposta}
   \begin{center}
     \begin{minipage}{0.85\textwidth}
       \lstinputlisting[basicstyle=\footnotesize, title=\texttt{elif.m}]{listings/elif.m}
