--- a/parte1/aula_03/aula_03.tex
+++ b/parte1/aula_03/aula_03.tex
@@ -10,7 +10,7 @@
   showstringspaces=false,
   basicstyle=\linespread{0.9}\ttfamily,
   keywordstyle=\textbf,
-  commentstyle=\color{red},
+  commentstyle=\color{gray},
   stringstyle=\color{orange},
   numbers=left,
   numberstyle=\tiny\color{gray},
